<resources>
    <string name="app_name">CalendarSymberSoft</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_an_event">Add an Event</string>
    <string name="choose_the_time">Choose the time</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="choose_the_date">Choose the date</string>
    <string name="from">From</string>
    <string name="choose_the_time_from">Choose the time from</string>
    <string name="to">To</string>
    <string name="choose_the_time_to">Choose the time to</string>
    <string name="description">Description</string>
    <string name="add_the_event">Add the event</string>
    <string name="back">BACK</string>
    <string name="incorrect_input">Incorrect input</string>
    <string name="event_added_successfully">Event added successfully!</string>
    <string name="no_description">No description</string>
    <string name="input_title">Input title</string>
    <string name="update_event">Update Event</string>
    <string name="cancel">Cancel</string>
    <string name="delete_the_event">Delete the Event</string>
    <string name="you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="event_deleted">Event was deleted</string>
    <string name="event_updated">Event updated successfully</string>
    <string name="calendar">Calendar</string>
    <string name="event_edit_menu">Event editing</string>
</resources>