<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/calendarFragment">

    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.example.calendarsymbersoft.view.fragments.CalendarFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendar">
        <action
            android:id="@+id/action_calendarFragment_to_addEventFragment"
            app:destination="@id/addEventFragment" />
        <action
            android:id="@+id/action_calendarFragment_to_editEventFragment"
            app:destination="@id/editEventFragment" />
    </fragment>
    <fragment
        android:id="@+id/addEventFragment"
        android:name="com.example.calendarsymbersoft.view.fragments.AddEventFragment"
        android:label="@string/add_the_event">
        <action
            android:id="@+id/action_addEventFragment_to_calendarFragment"
            app:destination="@id/calendarFragment" />
    </fragment>
    <fragment
        android:id="@+id/editEventFragment"
        android:name="com.example.calendarsymbersoft.view.fragments.EditEventFragment"
        android:label="@string/event_edit_menu"
        tools:layout="@layout/fragment_edit_event">
        <action
            android:id="@+id/action_editEventFragment_to_calendarFragment"
            app:destination="@id/calendarFragment" />
        <argument
            android:name="eventID"
            app:argType="integer" />
    </fragment>
</navigation>